<resources>
    <string name="app_name">WorkoutApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="quit_workout_check_message">Are you sure you want to quit the workout?</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="edit">Edit</string>
    <string name="add_new_section">Add new section</string>
    <string name="add">Add</string>
    <string name="count">Count</string>
    <string name="minutes">Minutes</string>
    <string name="check">Check</string>
    <string name="timer">Timer</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="format_string">Format String</string>
    <string name="new_workout">New Workout</string>
    <string name="section_type_icon">Section type icon.</string>
    <string name="delete_section_button">Delete section button.</string>
    <string name="delete_section_check_message">Are you sre you want to delete this section?</string>
</resources>