<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.edit.EditSectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_margin="@dimen/name_top_margin"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/nameTextInput"
            app:layout_constraintStart_toStartOf="@id/nameTextInput"
            app:layout_constraintEnd_toEndOf="@id/nameTextInput">

            <RadioButton
                android:id="@+id/checkRadioButton"
                android:text="@string/check"
                android:checked="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/timerRadioButton"
                android:text="@string/timer"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <EditText
            android:id="@+id/minutesEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="16dp"
            android:hint="@string/minutes"
            app:layout_constraintTop_toBottomOf="@id/typeRadioGroup"
            app:layout_constraintStart_toStartOf="@id/nameTextInput"
            android:autofillHints="Number of minutes for a timer" />

        <EditText
            android:id="@+id/countText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="16dp"
            android:hint="@string/count"
            app:layout_constraintTop_toBottomOf="@id/minutesEditText"
            app:layout_constraintStart_toStartOf="@id/nameTextInput"
            android:autofillHints="Count for the workout in question" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bottom_navigation_margin"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bottom_navigation_margin"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>