<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editWorkoutSheet"
            type="com.example.workoutapp.ui.edit.EditWorkoutSheet" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <FrameLayout
            style="?attr/bottomSheetStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?textAppearanceHeadline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/new_workout" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:autofillHints="Name of the workout."
                    android:hint="@string/name"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:autofillHints="Description of your workout."
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp" />


                <Button
                    android:id="@+id/addButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/bottom_navigation_margin"
                    android:onClick="@{() -> editWorkoutSheet.addWorkout()}"
                    android:text="@string/add" />
            </LinearLayout>

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>